# cdc-demo

./: Cargo.toml  LICENSE  README.md  debezium-offshore-instruments.properties  debezium-work-permits.properties  sqlserver.sql
src/: main.rs
