[package]
name = "cdc-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
rdkafka = { version="0.38.0", features = ["default"] }
serde_json = "1.0"
chrono = { version ="0.4", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }